--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -1,10 +1,10 @@
 /* Abstract */
-@import './abstract/_reset.scss';
-@import './abstract/_transitions.scss';
-@import './abstract/_variables.scss';
+@import "./abstract/_reset.scss";
+@import "./abstract/_transitions.scss";
+@import "./abstract/_variables.scss";
 
 html {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;
   scroll-behavior: smooth;
 }
